src/compiler/BESTParser.java
package compiler;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class BESTParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17, T__17 = 18,
			T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24, T__24 = 25, T__25 = 26, T__26 = 27,
			T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31, NUMBER = 32, VARIABLE = 33, WS = 34;
	public static final int RULE_start = 0, RULE_program = 1, RULE_program_block = 2, RULE_declaration = 3,
			RULE_assignment = 4, RULE_whenever = 5, RULE_loop = 6, RULE_function = 7, RULE_call = 8,
			RULE_function_parameters = 9, RULE_print = 10, RULE_condition = 11, RULE_boolean_expression = 12,
			RULE_expression = 13, RULE_expression3 = 14, RULE_expression2 = 15, RULE_expression4 = 16,
			RULE_expression5 = 17;
	public static final String[] ruleNames = { "start", "program", "program_block", "declaration", "assignment",
			"whenever", "loop", "function", "call", "function_parameters", "print", "condition", "boolean_expression",
			"expression", "expression3", "expression2", "expression4", "expression5" };

	private static final String[] _LITERAL_NAMES = { null, "';'", "'declare'", "'equals'", "'whenever'", "'('", "')'",
			"'then'", "'{'", "'}'", "'other'", "'loop'", "'::'", "'--'", "'method'", "'calling function'", "','",
			"'print '", "'\"'", "'='", "'<>'", "'lt'", "'gt'", "'lte'", "'gte'", "'True'", "'False'", "'+'", "'-'",
			"'*'", "'/'", "'%'" };
	private static final String[] _SYMBOLIC_NAMES = { null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, "NUMBER", "VARIABLE", "WS" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "BEST.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public BESTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class, 0);
		}

		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterStart(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitStart(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitStart(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(36);
				program();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program_blockContext program_block() {
			return getRuleContext(Program_blockContext.class, 0);
		}

		public ProgramContext program() {
			return getRuleContext(ProgramContext.class, 0);
		}

		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterProgram(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitProgram(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitProgram(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			setState(45);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1); {
				setState(38);
				program_block();
				setState(39);
				match(T__0);
				setState(40);
				program();
			}
				break;
			case 2:
				enterOuterAlt(_localctx, 2); {
				setState(42);
				program_block();
				setState(43);
				match(T__0);
			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_blockContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class, 0);
		}

		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class, 0);
		}

		public WheneverContext whenever() {
			return getRuleContext(WheneverContext.class, 0);
		}

		public LoopContext loop() {
			return getRuleContext(LoopContext.class, 0);
		}

		public FunctionContext function() {
			return getRuleContext(FunctionContext.class, 0);
		}

		public CallContext call() {
			return getRuleContext(CallContext.class, 0);
		}

		public PrintContext print() {
			return getRuleContext(PrintContext.class, 0);
		}

		public Program_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program_block;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterProgram_block(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitProgram_block(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitProgram_block(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Program_blockContext program_block() throws RecognitionException {
		Program_blockContext _localctx = new Program_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program_block);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1); {
				setState(47);
				declaration();
			}
				break;
			case VARIABLE:
				enterOuterAlt(_localctx, 2); {
				setState(48);
				assignment();
			}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3); {
				setState(49);
				whenever();
			}
				break;
			case T__10:
				enterOuterAlt(_localctx, 4); {
				setState(50);
				loop();
			}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5); {
				setState(51);
				function();
			}
				break;
			case T__14:
				enterOuterAlt(_localctx, 6); {
				setState(52);
				call();
			}
				break;
			case T__16:
				enterOuterAlt(_localctx, 7); {
				setState(53);
				print();
			}
				break;
			case T__0:
				enterOuterAlt(_localctx, 8); {
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode VARIABLE() {
			return getToken(BESTParser.VARIABLE, 0);
		}

		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_declaration;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterDeclaration(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitDeclaration(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitDeclaration(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(57);
				match(T__1);
				setState(58);
				match(VARIABLE);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode VARIABLE() {
			return getToken(BESTParser.VARIABLE, 0);
		}

		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}

		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_assignment;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterAssignment(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitAssignment(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitAssignment(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(60);
				match(VARIABLE);
				setState(61);
				match(T__2);
				setState(62);
				expression();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WheneverContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class, 0);
		}

		public List<ProgramContext> program() {
			return getRuleContexts(ProgramContext.class);
		}

		public ProgramContext program(int i) {
			return getRuleContext(ProgramContext.class, i);
		}

		public WheneverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_whenever;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterWhenever(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitWhenever(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitWhenever(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final WheneverContext whenever() throws RecognitionException {
		WheneverContext _localctx = new WheneverContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_whenever);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1); {
				setState(64);
				match(T__3);
				setState(65);
				match(T__4);
				setState(66);
				condition();
				setState(67);
				match(T__5);
				setState(68);
				match(T__6);
				setState(69);
				match(T__7);
				setState(70);
				program();
				setState(71);
				match(T__8);
			}
				break;
			case 2:
				enterOuterAlt(_localctx, 2); {
				setState(73);
				match(T__3);
				setState(74);
				match(T__4);
				setState(75);
				condition();
				setState(76);
				match(T__5);
				setState(77);
				match(T__6);
				setState(78);
				match(T__7);
				setState(79);
				program();
				setState(80);
				match(T__8);
				setState(81);
				match(T__9);
				setState(82);
				match(T__7);
				setState(83);
				program();
				setState(84);
				match(T__8);
			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public TerminalNode VARIABLE() {
			return getToken(BESTParser.VARIABLE, 0);
		}

		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class, 0);
		}

		public ProgramContext program() {
			return getRuleContext(ProgramContext.class, 0);
		}

		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_loop;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterLoop(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitLoop(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitLoop(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(88);
				match(T__10);
				setState(89);
				match(VARIABLE);
				setState(90);
				match(T__11);
				setState(91);
				expression();
				setState(92);
				match(T__12);
				setState(93);
				condition();
				setState(94);
				match(T__12);
				setState(95);
				expression();
				setState(96);
				match(T__7);
				setState(97);
				program();
				setState(98);
				match(T__8);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode VARIABLE() {
			return getToken(BESTParser.VARIABLE, 0);
		}

		public Function_parametersContext function_parameters() {
			return getRuleContext(Function_parametersContext.class, 0);
		}

		public ProgramContext program() {
			return getRuleContext(ProgramContext.class, 0);
		}

		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_function;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterFunction(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitFunction(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitFunction(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(100);
				match(T__13);
				setState(101);
				match(VARIABLE);
				setState(102);
				match(T__4);
				setState(103);
				function_parameters();
				setState(104);
				match(T__5);
				setState(105);
				match(T__7);
				setState(106);
				program();
				setState(107);
				match(T__8);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallContext extends ParserRuleContext {
		public TerminalNode VARIABLE() {
			return getToken(BESTParser.VARIABLE, 0);
		}

		public Function_parametersContext function_parameters() {
			return getRuleContext(Function_parametersContext.class, 0);
		}

		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_call;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterCall(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitCall(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitCall(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(109);
				match(T__14);
				setState(110);
				match(VARIABLE);
				setState(111);
				match(T__4);
				setState(112);
				function_parameters();
				setState(113);
				match(T__5);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_parametersContext extends ParserRuleContext {
		public List<TerminalNode> VARIABLE() {
			return getTokens(BESTParser.VARIABLE);
		}

		public TerminalNode VARIABLE(int i) {
			return getToken(BESTParser.VARIABLE, i);
		}

		public Function_parametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_function_parameters;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterFunction_parameters(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitFunction_parameters(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitFunction_parameters(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Function_parametersContext function_parameters() throws RecognitionException {
		Function_parametersContext _localctx = new Function_parametersContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_function_parameters);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE:
				enterOuterAlt(_localctx, 1); {
				{
					setState(115);
					match(VARIABLE);
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__15) {
					{
						{
							setState(116);
							match(T__15);
							setState(117);
							match(VARIABLE);
						}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2); {
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}

		public TerminalNode VARIABLE() {
			return getToken(BESTParser.VARIABLE, 0);
		}

		public TerminalNode NUMBER() {
			return getToken(BESTParser.NUMBER, 0);
		}

		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_print;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterPrint(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitPrint(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitPrint(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_print);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1); {
				setState(126);
				match(T__16);
				setState(127);
				expression();
			}
				break;
			case 2:
				enterOuterAlt(_localctx, 2); {
				setState(128);
				match(T__16);
				setState(129);
				match(T__17);
				setState(130);
				match(VARIABLE);
				setState(131);
				match(T__17);
			}
				break;
			case 3:
				enterOuterAlt(_localctx, 3); {
				setState(132);
				match(T__16);
				setState(133);
				match(T__17);
				setState(134);
				match(NUMBER);
				setState(135);
				match(T__17);
			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		public Boolean_expressionContext boolean_expression() {
			return getRuleContext(Boolean_expressionContext.class, 0);
		}

		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_condition;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterCondition(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitCondition(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitCondition(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condition);
		try {
			setState(163);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1); {
				setState(138);
				expression();
				setState(139);
				match(T__18);
				setState(140);
				expression();
			}
				break;
			case 2:
				enterOuterAlt(_localctx, 2); {
				setState(142);
				expression();
				setState(143);
				match(T__19);
				setState(144);
				expression();
			}
				break;
			case 3:
				enterOuterAlt(_localctx, 3); {
				setState(146);
				expression();
				setState(147);
				match(T__20);
				setState(148);
				expression();
			}
				break;
			case 4:
				enterOuterAlt(_localctx, 4); {
				setState(150);
				expression();
				setState(151);
				match(T__21);
				setState(152);
				expression();
			}
				break;
			case 5:
				enterOuterAlt(_localctx, 5); {
				setState(154);
				expression();
				setState(155);
				match(T__22);
				setState(156);
				expression();
			}
				break;
			case 6:
				enterOuterAlt(_localctx, 6); {
				setState(158);
				expression();
				setState(159);
				match(T__23);
				setState(160);
				expression();
			}
				break;
			case 7:
				enterOuterAlt(_localctx, 7); {
				setState(162);
				boolean_expression();
			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Boolean_expressionContext extends ParserRuleContext {
		public Boolean_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_boolean_expression;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterBoolean_expression(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitBoolean_expression(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitBoolean_expression(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Boolean_expressionContext boolean_expression() throws RecognitionException {
		Boolean_expressionContext _localctx = new Boolean_expressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_boolean_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(165);
				_la = _input.LA(1);
				if (!(_la == T__24 || _la == T__25)) {
					_errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF)
						matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Expression2Context expression2() {
			return getRuleContext(Expression2Context.class, 0);
		}

		public Expression3Context expression3() {
			return getRuleContext(Expression3Context.class, 0);
		}

		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_expression;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterExpression(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitExpression(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitExpression(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(167);
				expression2();
				setState(168);
				expression3();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expression3Context extends ParserRuleContext {
		public Expression2Context expression2() {
			return getRuleContext(Expression2Context.class, 0);
		}

		public Expression3Context expression3() {
			return getRuleContext(Expression3Context.class, 0);
		}

		public Expression3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_expression3;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).enterExpression3(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof BESTListener)
				((BESTListener) listener).exitExpression3(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof BESTVisitor)
				return ((BESTVisitor<? extends T>) visitor).visitExpression3(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Expression3Context expression3() throws RecognitionException {
		Expression3Context _localctx = new Expression3Context(_ctx, getState());
		enterRule(_localctx, 28, RULE_expression3);
		try {
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__26:
				enterOuterAlt(_localctx, 1); {
				setState(170);
				match(T__26);
				setState(171);
				expression2();
				setState(172);
				expression3();
			}
				break;
			case T__27:
				enterOuterAlt(_localctx, 2); {
				setState(174);
				match(T__27);
				setState(175);
				expression2();
				setState(176);
				expression3();
			}
				break;
			case T__0:
			case T__5:
			case T__7:
			case T__12:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
				enterOuterAlt(_localctx, 3); {
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}
